# AAL_Project

./: CMakeLists.txt  readme.txt
src/: Algorithm.cpp  Algorithm.h  InputDataGenerator.cpp  InputDataGenerator.h  ProductionLine.cpp  ProductionLine.h  main.cpp
src/Algorithm/: Algorithm.cpp  Algorithm.h  InputDataGenerator.cpp  InputDataGenerator.h  ProductionLine.cpp  ProductionLine.h
src/Algorithms/: Algorithm.cpp  Algorithm.h  InputDataGenerator.cpp  InputDataGenerator.h  SpliceTester.cpp  SpliceTester.h
src/Algoritms/: BasicAlgorithm.cpp  BasicAlgorithm.h  PatternSearchingAlgorithm.cpp  PatternSearchingAlgorithm.h  ProductionLine.cpp  ProductionLine.h  main.cpp
src/Presentation/: Application.cpp  Application.h  Options.cpp  Options.h
